# Food-Image-Classification-with-ResNet

./: README.md  pyproject.toml
data/: food_data.csv
data/bibimbap/: crop_area.properties  org_url.csv
data/bulgogi/: crop_area.properties  org_url.csv
data/dumpling/: crop_area.properties
data/honey_rice_cake/: crop_area.properties
data/jajangmyeon/: crop_area.properties
data/kimbap/: crop_area.properties  org_url.csv
data/tofu_sushi/: crop_area.properties
foodimgclassifier/: app.py  server.ipynb
foodimgclassifier/outputs/: ResNet18.pth  log.txt
foodimgclassifier/src/: train.ipynb
foodimgclassifier/src/models/: models.py  optimizers.py  preprocess.py
